scripts/nullaway/nullgtn/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8.txt
../nullgtn/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:20: error: [NullAway] initializer method does not guarantee @NonNull field numLeft (line 11) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public CombinationGenerator(int n, int r) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:57: error: [NullAway] initializer method does not guarantee @NonNull fields formula2 (line 42), sigma (line 51) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public WFF(String formula) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:358: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return formulaText;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:51: error: [NullAway] initializer method does not guarantee @NonNull fields rules (line 47), world (line 49) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DefaultReasoner() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:82: error: [NullAway] initializer method does not guarantee @NonNull fields rules (line 47), world (line 49) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DefaultReasoner(WorldSet myWorld, RuleSet myRules) {
           ^
    (see http://t.uber.com/nullaway )
5 errors
